--- a/citadel.yaml
+++ b/citadel.yaml
@@ -1,8 +1,11 @@
-name: Atmos
+name: Atmos (Zeus/Citadel)
 root: cp.php
 rule:
   - page: theme/js/page-botnet_vnc.js
     code: 200
+  - page: theme/style.css
+    code: 200
+    contains: m-botnet_webinjects
   - page: cp.php?m=login
     contains: Remember (MD5 cookies)
     code: 200
