--- a/pony2.yaml
+++ b/pony2.yaml
@@ -9,7 +9,7 @@ rule:
     code: 200
   - page: 'includes/templates/header.tpl'
     code: 200
-    contains: '<div class="pony_hdr_text">Pony 2.2'
+    contains: '<div class="pony_hdr_text">Pony 2.'
   - page: 'includes/design/images/favicon.ico'
     code: 200
     hash: b2e87bb6f28663fe5d28dec0d980d4cb
